Se añadieron los miembros David y Fernando

--- a/index.html
+++ b/index.html
@@ -184,6 +184,40 @@
                         </div>
                         <a href="#" class="btn">Ver detalles</a>
                     </div>
+                    <!-- Miembro 4 -->
+                    <div class="team-member">
+                        <div class="member-image">
+                            <img src="images/miembro4.jpg" alt="David Quevedo">
+                        </div>
+                        <h3>David Quevedo</h3>
+                        <p>Miembro del equipo Nahs Studios, apasionado por la tecnología y la creatividad. Colabora en proyectos de desarrollo y animación.</p>
+                        <div class="member-divisions">
+                            <span class="division-tag">Desarrollo</span>
+                            <span class="division-tag">Creatividad</span>
+                        </div>
+                        <div class="social-links">
+                            <a href="#"><img src="images/github.png" alt="GitHub"></a>
+                            <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
+                        </div>
+                        <a href="miembros/david.html" class="btn member-btn">Ver Portafolio</a>
+                    </div>
+                        <!-- Miembro 5 -->
+                        <div class="team-member">
+                            <div class="member-image">
+                                <img src="images/miembro5.jpg" alt="Fernando Rodríguez">
+                            </div>
+                            <h3>Fernando Rodríguez</h3>
+                            <p>Entusiasta de la innovación y la tecnología. Participa en Nahs Studios aportando ideas y soluciones para los proyectos más desafiantes.</p>
+                            <div class="member-divisions">
+                                <span class="division-tag">Innovación</span>
+                                <span class="division-tag">Tecnología</span>
+                            </div>
+                            <div class="social-links">
+                                <a href="#"><img src="images/github.png" alt="GitHub"></a>
+                                <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
+                            </div>
+                            <a href="miembros/fernando.html" class="btn member-btn">Ver Portafolio</a>
+                        </div>
                 </div>
             </div>
         </div>
