--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <h1>Nahs Studios</h1>
-            </div>
+        <div class="container menu-center">
             <nav>
-                <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#divisiones">Divisiones</a></li>
-                    <li><a href="#proyectos">Proyectos</a></li>
-                    <li><a href="#equipo">Equipo</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                <ul class="menu-group bordered-menu">
+                    <li><a href="#divisiones"><img src="images/divisiones.png" alt="Divisiones" class="menu-icon">Divisiones</a></li>
+                    <li><a href="#proyectos"><img src="images/proyectos.png" alt="Proyectos" class="menu-icon">Proyectos</a></li>
+                    <li class="logo-center">
+                        <div class="logo-visual">
+                            <img src="images/nsm-logo.png" alt="Nahs Studios Logo" style="height: 70px;">
+                        </div>
+                    </li>
+                    <li><a href="#equipo"><img src="images/equipo.png" alt="Equipo" class="menu-icon">Equipo</a></li>
+                    <li><a href="#contacto"><img src="images/contacto.png" alt="Contacto" class="menu-icon">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -184,40 +185,6 @@
                         </div>
                         <a href="#" class="btn">Ver detalles</a>
                     </div>
-                    <!-- Miembro 4 -->
-                    <div class="team-member">
-                        <div class="member-image">
-                            <img src="images/miembro4.jpg" alt="David Quevedo">
-                        </div>
-                        <h3>David Quevedo</h3>
-                        <p>Miembro del equipo Nahs Studios, apasionado por la tecnología y la creatividad. Colabora en proyectos de desarrollo y animación.</p>
-                        <div class="member-divisions">
-                            <span class="division-tag">Desarrollo</span>
-                            <span class="division-tag">Creatividad</span>
-                        </div>
-                        <div class="social-links">
-                            <a href="#"><img src="images/github.png" alt="GitHub"></a>
-                            <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
-                        </div>
-                        <a href="miembros/david.html" class="btn member-btn">Ver Portafolio</a>
-                    </div>
-                        <!-- Miembro 5 -->
-                        <div class="team-member">
-                            <div class="member-image">
-                                <img src="images/miembro5.jpg" alt="Fernando Rodríguez">
-                            </div>
-                            <h3>Fernando Rodríguez</h3>
-                            <p>Entusiasta de la innovación y la tecnología. Participa en Nahs Studios aportando ideas y soluciones para los proyectos más desafiantes.</p>
-                            <div class="member-divisions">
-                                <span class="division-tag">Innovación</span>
-                                <span class="division-tag">Tecnología</span>
-                            </div>
-                            <div class="social-links">
-                                <a href="#"><img src="images/github.png" alt="GitHub"></a>
-                                <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
-                            </div>
-                            <a href="miembros/fernando.html" class="btn member-btn">Ver Portafolio</a>
-                        </div>
                 </div>
             </div>
         </div>
@@ -228,56 +195,37 @@
             <h2>Nuestro Equipo</h2>
             <p class="section-subtitle">Conoce a los profesionales detrás de Nahs Studios</p>
             <div class="team-grid">
-                <!-- Miembro 1 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="images/miembro1.png" alt="Carlos Rodríguez">
+                        <img src="images/miembro4.jpg" alt="David Quevedo">
                     </div>
-                    <h3>Carlos Rodríguez</h3>
-                    <p>Especialista en hardware y fundador de Nahs Stuff Machine. Experto en armado de PCs de alto rendimiento.</p>
+                    <h3>David Quevedo</h3>
+                    <p>Miembro del equipo Nahs Studios, apasionado por la tecnología y la creatividad. Colabora en proyectos de desarrollo y animación.</p>
                     <div class="member-divisions">
-                        <span class="division-tag">NSM</span>
-                        <span class="division-tag">Gaming</span>
+                        <span class="division-tag">Desarrollo</span>
+                        <span class="division-tag">Creatividad</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><img src="images/github.png" alt="GitHub"></a>
                         <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
                     </div>
-                    <a href="miembros/carlos.html" class="btn member-btn">Ver Portafolio</a>
+                    <a href="miembros/david.html" class="btn member-btn">Ver Portafolio</a>
                 </div>
-                
-                <!-- Miembro 2 -->
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="images/miembro2.jpg" alt="Laura Gómez">
+                        <img src="images/miembro4.jpg" alt="Fernando Rodríguez">
                     </div>
-                    <h3>Laura Gómez</h3>
-                    <p>Diseñadora 3D y animadora principal de Nahs Studios Animation. Especialista en motion graphics.</p>
+                    <h3>Fernando Rodríguez</h3>
+                    <p>Miembro del equipo Nahs Studios, apasionado por la tecnología y la creatividad. Colabora en proyectos de desarrollo y animación.</p>
                     <div class="member-divisions">
-                        <span class="division-tag">Animation</span>
+                        <span class="division-tag">Desarrollo</span>
+                        <span class="division-tag">Creatividad</span>
                     </div>
                     <div class="social-links">
                         <a href="#"><img src="images/github.png" alt="GitHub"></a>
                         <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
                     </div>
-                    <a href="miembros/laura.html" class="btn member-btn">Ver Portafolio</a>
-                </div>
-                
-                <!-- Miembro 3 -->
-                <div class="team-member">
-                    <div class="member-image">
-                        <img src="images/miembro3.jpg" alt="Miguel Sánchez">
-                    </div>
-                    <h3>Miguel Sánchez</h3>
-                    <p>Desarrollador de videojuegos y líder de Nahs Studios Gaming. Especialista en Unity y Unreal Engine.</p>
-                    <div class="member-divisions">
-                        <span class="division-tag">Gaming</span>
-                    </div>
-                    <div class="social-links">
-                        <a href="#"><img src="images/github.png" alt="GitHub"></a>
-                        <a href="#"><img src="images/linkedin.png" alt="LinkedIn"></a>
-                    </div>
-                    <a href="miembros/miguel.html" class="btn member-btn">Ver Portafolio</a>
+                    <a href="miembros/fernando.html" class="btn member-btn">Ver Portafolio</a>
                 </div>
             </div>
         </div>
